--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "flow": "flow",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
@@ -99,7 +100,8 @@
   },
   "babel": {
     "presets": [
-      "react-app"
+      "react-app",
+      "flow"
     ],
     "plugins": [
       "syntax-async-functions",
@@ -113,6 +115,8 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "babel-preset-flow": "^6.23.0",
+    "flow-bin": "^0.59.0",
     "postcss-import": "^11.0.0"
   }
 }
